components/41-organisms/filter/_filter.scss
.filter {
  .filter-section {
    padding-top: .7rem;
    visibility: hidden;

    @include tablet {
      position: static;
      height: auto;
      box-shadow: none;
      overflow: visible;
      visibility: visible;
      z-index: auto;
    }

    &.visible {
      @include desktop-and-below {
        padding: 0;
        visibility: visible;

        > .modal-inner > .modal-header {
          display: block;
        }
      }
    }

    > .modal-inner {
      @include tablet {
        position: relative;
        top: 0;
        left: 0;
        width: 100%;
        height: 100%;
        margin: 0;
        transform: none;
        z-index: auto;
      }

      > .modal-header {
        display: none;
      }

      > .modal-content {
        @include tablet {
          padding: 0;
        }
      }
    }

    form {
      // style first level labels as headings
      > .form-item > label,
      > fieldset.form-item > legend {
        @extend %h3;
      }

      > fieldset {
        padding: 0;
        border: 0;
      }
    }

    .label-optional {
      display: none;
    }

    .filter__submit {
      margin-top: .8rem;
      margin-bottom: .8rem;
    }
  }

  .result-section {

    h2 {
      font-size: .8rem;
    }

    .result__show-filters {
      margin-bottom: 2rem;

      @include tablet {
        display: none;
      }
    }

    .selected-filters {
      margin-bottom: 1rem;

      .tag {
        margin: 0 .5rem .5rem 0;
      }

      a {
        white-space: nowrap;
      }
    }

    ul.filter__results {
      @extend %list-no-style;
    }

    .pager {
      @include tablet {
        li.previous,
        li.next {
          display: none;
        }
      }

      @include desktop {
        li.previous,
        li.next {
          display: block;
        }
      }
    }
  }
}

